# flix

./: AI-goals.md  AI_CONTEXT.md  Cargo.toml
flix-cli/: Cargo.toml
flix-cli/src/: main.rs  subcommands.rs
flix-core/: Cargo.toml
flix-core/src/: config.rs  engine.rs  flags.rs  lib.rs
flix-core/src/config/: io.rs  mod.rs  models.rs
flix-core/src/engine/: builder.rs  downloader.rs  git_manager.rs  installer.rs  mod.rs  platform.rs  registry.rs  scraper.rs  system.rs
flix-core/src/engine/downloader/: extract.rs  fetch.rs  mod.rs
flix-core/src/engine/installer/: core.rs  finalize.rs  mod.rs
flix-core/src/engine/providers/: generic.rs  github.rs  mod.rs  traits.rs
flix-core/src/engine/registry/: list.rs  mod.rs  remove.rs  tags.rs  update.rs
flix-core/src/engine/scraper/: github.rs  mod.rs  parser.rs
flix-core/src/engine/system/: fs.rs  install.rs  mod.rs  shell.rs
flix-core/src/engine/system/shell/: completion.rs  mod.rs  path.rs
flix-ui/: Cargo.toml
